C2: assert(dead->outcnt() == 0 && !dead->is_top()) failed: node must be dead

XMLWordPrintable

    • b27

        Tests:
        java/util/stream/test/org/openjdk/tests/java/util/stream/SequentialOpTest.java
        Product tested on: mach5-one-jdk-17-0-6+2-152-tier5 (CI build)
        OS/architecture: Windows-x64-debug, linux-x64-debug builds
        Reproducible: Intermittent, once in 100 times
        Is it a Regression: No, it's an intermittent crash. I have seen it only once in the CI run.
        Is it a platform-specific issue: currently seen with Windows-x64-debug, linux-x64-debug builds.

        Error:
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=\\opto/phaseX.hpp:505
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (c:\\sb\\prod\\1665174735\\workspace\\open\\src\\hotspot\\share\\opto/phaseX.hpp:505), pid=18536, tid=16608
        # assert(dead->outcnt() == 0 && !dead->is_top()) failed: node must be dead
        #
        # JRE version: Java(TM) SE Runtime Environment (17.0.6+2) (fastdebug build 17.0.6-ea+2-LTS-152)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17.0.6-ea+2-LTS-152, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)

              Assignee:
              Christian Hagedorn
              Reporter:
              Adithya Haradi Gopal (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: