8295116: C2: assert(dead->outcnt() == 0 && !dead->is_top()) failed: node must be dead

Backport-of: 94575d14f47e2dfb11b671bce26b69270b6bb3c8